# django-firebase-auth

./: LICENSE.md  MANIFEST.in  README.md  setup.cfg  setup.py
example/: Pipfile
example/app/: views.py
example/config/: settings.py  urls.py
firebase/: admin.py  authentication.py  firebase_app.py  managers.py  models.py  settings.py  urls.py  views.py
firebase/migrations/: 0001_initial.py  0002_auto_20210204_1237.py
firebase/static/firebase/auth/: main.css
firebase/templates/firebase/auth/: base.html  email-link.html  email-password.html  index.html  phone-invisible.html  phone-visible.html
